Update HTML, JS, and CSS for camera app improvements

--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,16 @@
     </div>
   </div>
 
+     <!-- In-app browser overlay -->
+<div id="open-external-overlay" style="display:none;">
+  <div class="overlay-box">
+    <h2>Open in your browser for camera access</h2>
+    <p>To use the camera, open this page in your phone's browser (Chrome, Safari). Tap the button below:</p>
+    <button id="open-external-btn">Open in Browser</button>
+    <p class="small">If that doesn't work, tap the ⋯ menu in Messenger and choose “Open in browser”.</p>
+  </div>
+</div>
+
   <!-- Gallery Box -->
   <div class="gallery-container">
     <div id="gallery"></div>
