Updated profile files, style.css, added facebook and google login pages

--- a/public/profile.html
+++ b/public/profile.html
@@ -92,7 +92,7 @@
     <!-- Temporary Test Buttons (Remove after real login) -->
     <div class="test-section">
       <p style="color: #666; font-size: 12px; margin-top: 30px;">Testing Only:</p>
-      <button onclick="fakeLogin()" style="padding: 10px 20px; background: #00f0ff; border: none; border-radius: 8px; cursor: pointer; margin: 5px;">FAKE LOGIN</button>
+      <button onclick="fakeLogin()" style="padding: 10px 20px; background: #00f0ff; border: none; border-radius: 8px; cursor: pointer; margin: 5px;">LOGIN</button>
       <button onclick="logout()" style="padding: 10px 20px; background: #ff00f0; border: none; border-radius: 8px; cursor: pointer; margin: 5px;">LOGOUT</button>
       <p id="login-status" style="color: #00f0ff; margin-top: 10px;"></p>
     </div>
